--- a/src/index.css
+++ b/src/index.css
@@ -122,7 +122,7 @@ header .nav-links li:last-child {
 }
 
 @media (max-width: 575px) {
-  .header .nav-links li {
+  header .nav-links li {
     margin: 0 5px;
   }
 }
@@ -233,6 +233,7 @@ header .nav-links li:last-child {
   }
 }
 
+/* MOVIE CARD */
 .movie-card {
   width: 100%;
   border-radius: 5px;
@@ -298,4 +299,61 @@ header .nav-links li:last-child {
   color: #c4c4c4;
   font-size: 3rem;
   text-align: center;
+}
+
+/* WATCH LIST */
+
+.watch-list {
+  padding: 30px 0;
+}
+
+.watch-list .main-heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.movie-count {
+  display: block;
+  background-color: var(--secondary);
+  padding: 5px 15px;
+  font-size: 1.125rem;
+  font-weight: 600;
+  border-radius: 999px;
+  color: var(--primary);
+}
+
+.watch-list h1 {
+  color: var(--primary);
+  margin: 0;
+}
+
+.movie-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+}
+
+
+/* WATCHED */
+.watched {
+  padding: 30px 0;
+}
+
+.watched .main-heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.watched .movie-count {
+  display: block;
+  background-color: var(--secondary);
+  padding: 5px 15px;
+  font-size: 1.125rem;
+  font-weight: 600;
+  border-radius: 999px;
+  color: var(--primary);
 }
